[gd_scene load_steps=38 format=2]

[ext_resource path="res://art/ROBOTdobreczesci_prawanogaciemnosci.png" type="Texture" id=1]
[ext_resource path="res://RobotElement.gd" type="Script" id=2]
[ext_resource path="res://art/ROBOTdobreczesci_lewarekaciemnosci.png" type="Texture" id=3]
[ext_resource path="res://art/ROBOTdobreczesci_lewanogakaciemnosci.png" type="Texture" id=4]
[ext_resource path="res://sounds/robot chirp 3.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/Robot Fix 1.wav" type="AudioStream" id=6]
[ext_resource path="res://art/ROBOTdobreczesci_prawarekaciemnosci.png" type="Texture" id=7]
[ext_resource path="res://art/ROBOTzleczesci_zlanoga.png" type="Texture" id=8]
[ext_resource path="res://art/ROBOTzleczesci_zlareka.png" type="Texture" id=9]
[ext_resource path="res://art/ROBOTzleczesci_zlareka2.png" type="Texture" id=10]
[ext_resource path="res://art/red.png" type="Texture" id=11]
[ext_resource path="res://art/ROBOT_dobraczesci_ucho1.png" type="Texture" id=12]
[ext_resource path="res://art/ROBOTzleczesci_ucho2.png" type="Texture" id=13]
[ext_resource path="res://art/r1_dobre_serce.png" type="Texture" id=14]
[ext_resource path="res://art/robot2_lewareka.png" type="Texture" id=15]
[ext_resource path="res://art/r1_czarne_serce.png" type="Texture" id=16]
[ext_resource path="res://art/robot2_prawareka.png" type="Texture" id=17]
[ext_resource path="res://art/robot2_prawanoga.png" type="Texture" id=18]
[ext_resource path="res://art/robot2_kabelred.png" type="Texture" id=19]
[ext_resource path="res://art/robot2_kabelyellow.png" type="Texture" id=20]
[ext_resource path="res://art/robot2klapka.png" type="Texture" id=21]
[ext_resource path="res://art/robot3_handbad.png" type="Texture" id=22]
[ext_resource path="res://art/robot3_handgood.png" type="Texture" id=23]
[ext_resource path="res://art/robot3_eyebad.png" type="Texture" id=24]
[ext_resource path="res://art/robot3_eyegood.png" type="Texture" id=25]
[ext_resource path="res://art/Robot3_heartgood.png" type="Texture" id=26]
[ext_resource path="res://art/robot3_heartbad.png" type="Texture" id=27]
[ext_resource path="res://art/robot4_leg1good.png" type="Texture" id=28]
[ext_resource path="res://art/robot4_leg2good.png" type="Texture" id=29]
[ext_resource path="res://art/robot4_leg1bad.png" type="Texture" id=30]
[ext_resource path="res://art/robot4_leg2bad.png" type="Texture" id=31]
[ext_resource path="res://art/robot4_zeby3bad.png" type="Texture" id=32]
[ext_resource path="res://art/robot4_zeby3good.png" type="Texture" id=33]
[ext_resource path="res://art/spark_particle2.png" type="Texture" id=34]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.2633, 161.759 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "R4mouthgood",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "R4leg2bad",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "R3goodheart",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "R4leg1bad",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "R3badhand",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "R4mouthbad",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "R3badheart",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "R3goodhand",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "R1GoodEar2",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "R1WrongPart3",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "R1LeftLeg",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "R1WrongPart2",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "R1GoodHeart",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "R1WrongPart1",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "R1BadHeart1",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "R2Hand1",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "R1GoodEar",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "R2Leg1",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "R2Leg2",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "R2Hand2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "R1RightLeg",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "R2plate",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "R1RightHand",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "R3goodeye",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "R3badeye",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "R1LeftHand",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "R4leg2good",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "R4leg1good",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "R2yellow",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "R2red",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.792157, 0.690196, 0.12549, 0.835294, 1, 1, 1, 1 )

[node name="RobotElement" type="RigidBody2D"]
input_pickable = true
mode = 3
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
script = ExtResource( 2 )
type = "R2yellow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.47362, 3.8147e-06 )
frames = SubResource( 2 )
animation = "R4mouthgood"

[node name="GO_BACK_SOUND" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="MATCH_SOUND" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
emitting = false
amount = 16
lifetime = 2.0
one_shot = true
preprocess = 0.2
speed_scale = 2.86
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 34 )
emission_shape = 1
emission_sphere_radius = 128.0
spread = 104.0
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 3 )
[connection signal="go_back" from="." to="." method="_on_RobotElement_go_back"]
[connection signal="input_event" from="." to="." method="_on_RobotElement_input_event"]
[connection signal="snap_it" from="." to="." method="_on_RobotElement_snap_it"]
